<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AlarmList" Id="{e838e5c6-f57b-4165-8f8f-acd96c37ea14}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE AlarmList :
(
	emergency_stop := 1,
	encoder_error,
	approach,
	proximity,
	collision
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>