<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{30d3e2bd-864f-459c-8094-8af3725d02eb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	 fb_alarm : ARRAY [1..AlarmEventParam.ALARM_MAX_COUNT] OF POINTER TO FB_Alarm;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>